--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
     <div class="masthead-left">
       <div class="logo">
         Problem<br>Vault
-        <span>66 Challenges · All Domains</span>
+        <span>70 Challenges · All Domains</span>
       </div>
     </div>
 
@@ -743,7 +743,7 @@
     </div>
 
     <div class="masthead-right">
-      <span class="total-badge" id="totalBadge">66 problems</span>
+      <span class="total-badge" id="totalBadge">70 problems</span>
       <button class="btn-pick" onclick="pickRandom()">⚄ Pick Random</button>
     </div>
   </header>
@@ -2594,7 +2594,90 @@
   • Real-time monitoring dashboard displaying detected targets with confidence indicators  
   `,
   tags:["AI","Cybersecurity"]
-  }
+  },
+  {
+id:67,
+title:"Seamless Event Management System",
+heading:"Automated End-to-End Event Lifecycle Platform",
+body: `BACKGROUND:
+Organizing events — whether academic, corporate, or community — involves coordinating registrations, schedules, communications, resources, and feedback across multiple tools and teams. Most organizers rely on disconnected spreadsheets, manual follow-ups, and informal coordination, leading to errors, missed communications, and poor post-event insight. There is a clear need for a centralized platform that automates repetitive tasks, keeps participants engaged in real time, and generates actionable analytics to improve future events.
+────────────────────────────────
+PROBLEM STATEMENT
+Design an integrated event management platform that streamlines the entire event lifecycle — from planning and registration to execution and feedback — through automation, real-time coordination, and analytics.
+The solution should aim to address:
+* Fragmented tools and manual processes causing errors in event coordination  
+* No centralized system for managing registrations, ticketing, budgeting, and scheduling together  
+* Lack of real-time participant engagement features during live events  
+* Organizers unable to track attendance, logistics, and task progress in one place  
+* Absence of structured post-event feedback collection and performance analytics  
+────────────────────────────────
+SCOPE & CONSIDERATIONS
+Participants should consider:
+* Centralized event dashboard with live updates on attendance, schedule, and logistics  
+* Automated invitations, reminders, and follow-up communications to participants  
+* Interactive features for live events: polls, Q&A, and real-time notifications  
+* Task management tools for organizing team coordination and delegation  
+* Post-event feedback collection with engagement analytics and success metrics  
+* Support for multiple event types: academic, corporate, hybrid, and virtual  
+`,
+tags:["Smart Systems","Finance"]
+},
+
+{
+id:68,
+title:"Smart Inventory Management System with QR Code Access",
+heading:"QR-Code-Driven Real-Time Inventory Tracking",
+body: `BACKGROUND:
+Traditional inventory management relies heavily on manual tracking through spreadsheets and physical logs — a process prone to human error, stock discrepancies, and delayed updates. Organizations across education, healthcare, retail, and manufacturing struggle with poor stock visibility, unauthorized access, and inefficient audit processes. QR code technology offers a lightweight, cost-effective way to digitize inventory tracking, enabling real-time updates, instant item lookup, and automated alerts — without requiring expensive specialized hardware.
+────────────────────────────────
+PROBLEM STATEMENT
+Design a smart inventory management system that uses QR codes to track stock movements in real time, replacing manual processes with an accurate, role-controlled, and auditable digital solution.
+The solution should aim to address:
+* Manual inventory tracking causing errors, delays, and stock discrepancies  
+* No real-time visibility into item status (available, checked out, under maintenance, low stock)  
+* Lack of role-based access control for staff, admins, and auditors  
+* Inefficient audit processes with no automated report generation  
+* Missing alerts for critical inventory events such as low stock or approaching expiry  
+────────────────────────────────
+SCOPE & CONSIDERATIONS
+Participants should consider:
+* QR code generation and assignment per inventory item with unique metadata (name, type, date, status)  
+* Mobile or web app for scanning QR codes to retrieve or update item details in real time  
+* Centralized dashboard for viewing, sorting, filtering, and managing all stock items  
+* Inventory status tracking: available, checked out, under maintenance, and low stock  
+* Automated notifications for low inventory levels, expiry dates, and critical actions  
+* Role-based access control for staff, admins, and auditors with secure logging and audit-ready report export  
+`,
+tags:["Smart Systems","Finance"]
+},
+
+{
+id:69,
+title:"Smart Proctoring System for Exam",
+heading:"AI-Driven Remote Exam Integrity and Monitoring",
+body: `BACKGROUND:
+Online examinations have become standard in education and recruitment, but ensuring exam integrity without physical supervision remains a critical unsolved challenge. Candidates can exploit the remote environment through impersonation, unauthorized resources, or collusion. Human proctors cannot scale to monitor thousands of simultaneous examinees cost-effectively. AI-powered proctoring — combining facial recognition, gaze tracking, audio analysis, and behavior detection — offers a scalable, evidence-based approach to maintaining fairness in online assessments.
+────────────────────────────────
+PROBLEM STATEMENT
+Design an AI-driven smart proctoring system that ensures secure, cheat-free online examinations through continuous real-time monitoring, identity verification, behavior analysis, and automated reporting.
+The solution should aim to address:
+* Impersonation and unauthorized candidate access in online examination environments  
+* Inability to scale human proctoring to large simultaneous exam sessions cost-effectively  
+* Cheating through unauthorized resources, external communication, or screen switching  
+* Lack of timestamped, evidence-backed logs of suspicious behavior for review  
+* Poor trust in online examination outcomes among institutions and employers  
+────────────────────────────────
+SCOPE & CONSIDERATIONS
+Participants should consider:
+* Facial recognition and ID verification to authenticate candidates before and during the exam  
+* Webcam-based face detection and gaze tracking to monitor attention and detect suspicious movement  
+* Audio capture and analysis to detect suspicious conversations or background noise  
+* Screen activity monitoring or navigation restriction to prevent switching windows or apps  
+* Automated timestamped logging of all flagged suspicious activities with supporting evidence  
+* Detailed proctoring report generation for administrator review and candidate-facing exam dashboard  
+`,
+tags:["AI","Education"]
+}
   ];
   // ── STATE ── 
   let activeQuery = '';
