Add project details

--- a/index.html
+++ b/index.html
@@ -2677,6 +2677,89 @@ Participants should consider:
 * Detailed proctoring report generation for administrator review and candidate-facing exam dashboard  
 `,
 tags:["AI","Education"]
+},
+{
+id:70,
+title:"Smart Yoga Mat with AI Integration",
+heading:"AI-Powered Yoga Experience with Smartwatch Connectivity",
+body: `BACKGROUND:
+Yoga has gained global recognition for its physical, mental, and wellness benefits, and is a core component of India's AYUSH systems of medicine. As digital adoption accelerates, yoga practitioners increasingly seek technology-enhanced experiences that provide personalized guidance, real-time feedback, and progress tracking. Traditional yoga mats offer no interactivity or data insight, leaving practitioners — especially beginners — without posture correction or performance monitoring. There is a significant opportunity to bridge traditional yoga practice with modern AI and wearable technology in an affordable, accessible format suited for AYUSH start-ups and enthusiasts across India.
+────────────────────────────────
+PROBLEM STATEMENT
+Design and develop a Smart Yoga Mat integrated with AI capabilities and smartwatch connectivity that provides personalized yoga guidance, real-time progress tracking, and curated expert content — at an affordable price point.
+The solution should aim to address:
+• Lack of real-time posture correction and personalized feedback during solo yoga practice  
+• No integration between yoga practice and wearable health metrics (heart rate, calories, duration)  
+• Absence of curated, adaptive yoga content tailored to individual performance and fitness levels  
+• High cost of existing smart fitness products limiting adoption among AYUSH start-ups and general users  
+• Disconnected yoga experience with no progress tracking or long-term improvement insights  
+────────────────────────────────
+SCOPE & CONSIDERATIONS
+Participants should consider:
+• Seamless smartwatch integration for real-time tracking of heart rate, calories burned, and workout duration  
+• AI algorithms to analyze wearable data and generate personalized yoga routine recommendations  
+• Curated content delivery: instructional videos, audio guidance, and posture correction feedback  
+• User-friendly interface suitable for practitioners across experience levels  
+• Ergonomic mat design compatible with various yoga styles and body types  
+• Cost-effective manufacturing feasibility appropriate for AYUSH start-ups and mass adoption in India  
+`,
+tags:["Healthcare","AI"]
+},
+
+{
+id:71,
+title:"Real-Time Monitoring of Caste and Revenue Certificate Issuance",
+heading:"Data-Driven Resource Allocation for Revenue Department Certificates",
+body: `BACKGROUND:
+The Revenue Department issues a wide range of essential certificates — including caste, income, domicile, and residency certificates — that citizens require for education admissions, government schemes, and employment. Currently, resource allocation across Sub-divisions is done without data analysis, resulting in severe backlogs in high-demand areas while other offices remain underutilized. District and central administrators have no real-time visibility into application volumes, processing times, or officer workloads — making it impossible to proactively redistribute resources or identify systemic bottlenecks.
+────────────────────────────────
+PROBLEM STATEMENT
+Design a real-time monitoring and analytics platform for the issuance of caste and other revenue certificates that enables data-driven resource allocation at Sub-division, District, and Central levels.
+The solution should aim to address:
+• No real-time visibility into application volumes, backlogs, and processing status across Sub-divisions  
+• Resource allocation decisions made without demand analysis, causing uneven backlogs  
+• District and central administrators lacking tools to identify and respond to bottlenecks proactively  
+• Inability to measure officer productivity or Sub-division performance against benchmarks  
+• Citizens unable to track application status or anticipate processing timelines  
+────────────────────────────────
+SCOPE & CONSIDERATIONS
+Participants should consider:
+• Real-time dashboard for Sub-division, District, and Central level administrators showing application load, status, and backlog  
+• Demand forecasting module using historical application data to predict volume surges by region and season  
+• Resource allocation recommendation engine to suggest officer or workload redistribution across Sub-divisions  
+• Application status tracking interface for citizens to monitor certificate processing in real time  
+• Performance metrics per Sub-division: average processing time, pending applications, and resolution rate  
+• Alert system for administrators when backlog crosses defined thresholds at any Sub-division  
+`,
+tags:["Smart Systems","Finance"]
+},
+
+{
+id:72,
+title:"Domain Hosting Details Investigator",
+heading:"Accurate Hosting Identification for Suspicious Websites",
+body: `BACKGROUND:
+Cybercrime investigators and security researchers routinely use WHOIS lookups to identify the hosting providers of suspicious websites. However, a growing number of malicious websites obscure their true hosting infrastructure by routing traffic through services like Cloudflare, which provides CDN, SSL certificates, and DDoS protection. When queried, Cloudflare confirms only its role as a proxy or SSL provider — not the actual origin host — effectively shielding the real hosting details from investigators. This gap enables bad actors to operate with reduced traceability, significantly hindering cybercrime response and takedown efforts.
+────────────────────────────────
+PROBLEM STATEMENT
+Design a mechanism or tool that can accurately identify the true hosting provider and infrastructure details of suspicious websites, even when they are obscured behind proxy services, CDNs, or privacy-shielding layers like Cloudflare.
+The solution should aim to address:
+• WHOIS lookups returning proxy or CDN details instead of actual origin hosting information  
+• Cloudflare and similar services masking true hosting providers from cybercrime investigators  
+• No reliable automated method to pierce through CDN layers and identify real server infrastructure  
+• Delays in takedown requests due to inability to identify and contact the actual hosting provider  
+• Investigators lacking a unified tool to aggregate and cross-reference hosting intelligence from multiple sources  
+────────────────────────────────
+SCOPE & CONSIDERATIONS
+Participants should consider:
+• Multi-source intelligence aggregation: WHOIS, DNS records, SSL certificate history, IP geolocation, and passive DNS databases  
+• Techniques to identify origin IP leakage through misconfigured headers, historical DNS records, or subdomain enumeration  
+• Integration with threat intelligence feeds and public databases (e.g., Shodan, VirusTotal, SecurityTrails)  
+• Automated analysis pipeline that outputs verified hosting provider, server location, and registrar details  
+• Flagging of CDN/proxy usage with confidence scoring on the accuracy of identified origin hosting  
+• Investigator-friendly report generation with evidence trail suitable for legal and law enforcement use  
+`,
+tags:["Cybersecurity","AI"]
 }
   ];
   // ── STATE ── 
